--- a/docs/content/developer/standards/coin.mdx
+++ b/docs/content/developer/standards/coin.mdx
@@ -148,7 +148,7 @@ const tx = new Transaction();
 tx.moveCall({
     target: `0x2::coin::deny_list_add`,
     arguments: [
-        tx.object(<SUI-DENY-LIST-OBJECT-ID>),
+        tx.object(<IOTA-DENY-LIST-OBJECT-ID>),
         tx.object(<DENY-CAP-ID>),
         tx.pure.address(options.address),
     ],
