--- a/docs/content/developer/advanced/asset-tokenization.mdx
+++ b/docs/content/developer/advanced/asset-tokenization.mdx
@@ -552,6 +552,8 @@ To represent a new asset as a fractional asset, modify this module to `<template
     unlock module-->>User: Returns Asset Cap
     ```
 
+    ## Quizzes
+
     <Quiz questions={questions} />
 
     ## Variations
